<resources>
    <string name="app_name">MediGuide</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="account">Account</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_your">Login to your</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="create_your">Create Your</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="logo">Logo</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="get_started">Get Started</string>
    <string name="start_chatting">Start chatting with MediGuide now. You can ask me anything about data.</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="send_a_message">Send a message.</string>
    <string name="back">back</string>
    <string name="username">Username</string>
    <string name="user_gmail_com">User@gmail.com</string>
    <string name="logout">Logout</string>
    <string name="or">OR</string>
    <string name="your_web_client_id">846594039203-679lqufc0akvr0k2nnldnuqe0us6rp9n.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">chat</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="chatbot">MediGuide</string>
    <string name="type_in_your_question">Type in your question…</string>
    <string name="message_count">Messages count</string>
    <string name="button_delete">button delete</string>
    <string name="background_text">Hey there! Welcome to MediGuide, your trusted health companion. I\'m your virtual assistant, ready to help you with a smile. Let\'s embark on a journey to better health together!</string>
    </resources>